# operation.logger

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/oplogger/: __init__.py  cli.py  config.py  console.py  logger.py  parser.py  session.py  state.py
tests/: test_parser.py
